# movedrone_setup_assistant

./: .gitignore  .rosinstall  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: setup_assistant.rviz
launch/: description.launch  setup_assistant.launch
scripts/: keyboard_event_checker_node.py  setup_assistant_node.py
src/movedrone_setup_assistant/: __init__.py  author_information.py  base_setting.py  basic_widgets.py  const.py  controllers.py  file_browser.py  frame_tree.py  gps.py  imu.py  keyboard_event_checker.py  magnetic.py  package_generator.py  parameter_getters.py  perception_3d.py  propellers.py  robot_model_loader.py  robot_structure.py  robot_visualizer.py  ros_package.py  rviz.py  settings.py  setup_assistant.py  simulation.py  start.py  urdf_parser.py  utils.py  xml_nodes.py
src/movedrone_setup_assistant/parameter_getters/: __init__.py  base.py  combo_box.py  directory_dialog.py  double_spin_box.py  file_dialog.py  line_edit.py  spin_box.py  vector3d.py
src/movedrone_setup_assistant/setting_widgets/: __init__.py  author_information.py  barometer.py  base_setting.py  controllers.py  gps.py  imu.py  magnetic.py  magnetometer.py  perception_3d.py  propellers.py  ros_package.py  simulation.py  start.py
templates/: CMakeLists.txt  README.md  bringup.launch  controller.launch  controller.yaml  gazebo.launch  node_params.yaml  observer.yaml  package.xml
urdf/: ardrone.xacro  asymmetric_quadrotor.xacro  firefly.xacro  hummingbird.xacro  multirotor_base.xacro  neo11.xacro  neo9.xacro  pelican.xacro
urdf/harrier/: harrierD7.xacro  multirotor_base_harrier.xacro
