<?xml version="1.0"?>
<package format="2">

	<name>{{ pkg_name }}</name>
	<version>0.0.0</version>
	<description>MoveDrone configuration package of {{ drone_name }}</description>
	<maintainer email="{{ user_email }}">{{ user_name }}</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

</package>
