<?xml version="1.0"?>
<package format="2">

	<name>{{ pkg_name }}</name>
	<version>0.0.0</version>
	<description>MoveDrone configuration package for {{ drone_name }}</description>
	<maintainer email="{{ author_email }}">{{ author_name }}</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

</package>
